@@ -1,3 +1,8 @@
+2015-12-15  Gabriel Dos Reis  <gdr@axiomatics.org>
+
+	* ipr/interface: Add Expansion for pack expansions.
+	* ipr/impl: Implement.
+
 2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>
 
 	* ipr/interface: Sequence<T>::begin and Sequence<T>::end no longer
